fixed letter spacing for contact subtitlte for phones

--- a/src/App.css
+++ b/src/App.css
@@ -427,6 +427,7 @@ MEDIA QUERIES
 
   .contact__subtitle{
     font-size: 1em;
+    letter-spacing: 0.2em;
   }
 
   .footer__item {
